--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/4654a97041/UntitledProject/style.css">
     <title>UTN FRRO | Bolsa de Trabajo</title>
   </head>
   <body>
